Adding markup to get list of users

--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -13,6 +13,15 @@
 		<title>Simple HTMX Page</title>
 	</head>
 	<body>
-		<h1>First htmx page</h1>
+		<div class="flex flex-col items-center px-0 py-0">
+			<h1 class="px-1 py-0 my-3 text-2xl font-bold">
+				My first HTMX page
+			</h1>
+			<button
+				class="bg-blue-500 text-white px-2 py-3 mx-5 my-3 rounded-lg"
+			>
+				Fetch Users
+			</button>
+		</div>
 	</body>
 </html>
