--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -27,10 +27,17 @@
 				id="getButton"
 				hx-get="/users"
 				hx-target="#users"
+				hx-indicator="#loading"
 				class="bg-blue-500 text-white px-2 py-3 mx-5 my-3 rounded-lg"
 			>
 				Fetch Users
 			</button>
+			<span id="loading" class="htmx-indicator"
+				><img
+					src="./img/loader.gif"
+					alt="loading..."
+					class="m-auto h-10"
+			/></span>
 			<div id="users"></div>
 		</div>
 	</body>
