Adding request limit

--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -27,6 +27,7 @@
 				id="getButton"
 				hx-get="/users"
 				hx-target="#users"
+				hx-vals='{"limit": 5}'
 				hx-indicator="#loading"
 				class="bg-blue-500 text-white px-2 py-3 mx-5 my-3 rounded-lg"
 			>
