--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -36,6 +36,10 @@
 					name="fahrenheit"
 					value="32"
 					class="text-center bg-neutral-800 text-2xl font-bold w-full text-white"
+					hx-get="/calculate"
+					hx-target="#celcius"
+					hx-trigger="keyup changed, submit"
+					hx-vals="js:{fahrenheit: getTemp()}"
 				/>
 			</p>
 			<span class="text-4xl text-white">=</span>
@@ -53,5 +57,10 @@
 				</span>
 			</p>
 		</form>
+		<script>
+			const getTemp = () => {
+				return document.getElementById("fahrenheit").value;
+			};
+		</script>
 	</body>
 </html>
