added fake weather app functionality

--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -19,48 +19,26 @@
 		<title>Fahrenheit to Degrees Calculator</title>
 	</head>
 	<body>
-		<form
-			class="flex flex-row justify-center items-center px-5 py-5 w-screen h-screen bg-neutral-900"
+		<div
+			class="h-screen w-screen bg-blue-500 flex flex-col items-center justify-center"
 		>
+			<div class="text-white text-7xl font-bold">Calgary</div>
 			<p
-				class="flex flex-col-reverse items-center h-min w-2/5 bg-neutral-700 mx-3 border border-neutral-500 rounded"
+				class="text-white text-3xl font-bold mt-5"
+				hx-get="/get-temperature"
+				hx-swap="innerHTML"
+				hx-trigger="every 5s"
+				hx-indicator="#loading"
 			>
-				<label
-					for="fahrenheit"
-					class="text-neutral-200 font-lg text-base"
-					>Fahrenheit</label
-				>
-				<input
-					type="text"
-					id="fahrenheit"
-					name="fahrenheit"
-					value="32"
-					class="text-center bg-neutral-800 text-2xl font-bold w-full text-white"
-					hx-get="/calculate"
-					hx-target="#celcius"
-					hx-trigger="keyup changed, submit"
-					hx-vals="js:{fahrenheit: getTemp()}"
+				0 degrees
+			</p>
+			<span id="loading" class="htmx-indicator mt-3">
+				<img
+					src="./img/loader.gif"
+					alt="loading..."
+					class="m-auto h-10"
 				/>
-			</p>
-			<span class="text-4xl text-white">=</span>
-			<p
-				class="flex flex-col-reverse items-center h-min w-2/5 bg-neutral-700 mx-3 border border-neutral-500 rounded"
-			>
-				<label for="celcius" class="text-neutral-200 font-lg text-base"
-					>Celcius</label
-				>
-				<span
-					id="celcius"
-					class="text-center bg-neutral-800 text-2xl font-bold w-full text-white"
-				>
-					0
-				</span>
-			</p>
-		</form>
-		<script>
-			const getTemp = () => {
-				return document.getElementById("fahrenheit").value;
-			};
-		</script>
+			</span>
+		</div>
 	</body>
 </html>
