--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -10,53 +10,54 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://cdn.tailwindcss.com"></script>
-		<script>
-			document.addEventListener("htmx:configRequest", (evt) => {
-				evt.detail.headers = [];
-			});
-		</script>
 
 		<title>Search Feature</title>
 	</head>
-	<body class="h-screen w-screen bg-blue-900 container mx-auto py-8 max-w-lg">
-		<span id="loading" class="htmx-indicator">
-			<img src="./img/loader.gif" alt="loading..." class="m-auto h-10" />
-		</span>
-		<div
-			class="bg-gray-900 text-white p-4 border border-gray-600 rounded-lg max-w-lg m-auto"
-		>
-			<h3 class="text-2xl mb-3 text-center">Search Results</h3>
-			<input
-				class="border border-gray-600 bg-gray-800 p-2 rounded-lg w-full mb-5"
-				type="search"
-				name="search"
-				placeholder="Begin Typing to Search Users..."
-				hx-post="/search"
-				hx-trigger="input changed delay:500ms, search"
-				hx-target="#search-results"
-				hx-indicator="#loading"
-			/>
-			<table class="min-w-full divide-y divide-gray-200">
-				<thead class="bg-gray-800 text-white">
-					<tr>
-						<th
-							scope="col"
-							class="px-6 py-3 text-center text-xs font-medium uppercase tracking-wider"
-						>
-							Name
-						</th>
-						<th
-							scope="col"
-							class="px-6 py-3 text-center text-xs font-medium uppercase tracking-wider"
-						>
-							Email
-						</th>
-					</tr>
-				</thead>
-				<tbody id="search-results" class="divide-y divide-gray-600">
-					<!-- Your search results go here -->
-				</tbody>
-			</table>
+	<body class="bg-blue-900">
+		<div class="container mx-auto py-8 max-w-lg">
+			<span class="htmx-indicator" id="loading">
+				<img
+					src="img/loader.gif"
+					alt="Loading..."
+					class="m-auto h-10"
+				/>
+			</span>
+			<div
+				class="bg-gray-900 text-white p-4 border border-gray-600 rounded-lg max-w-lg m-auto"
+			>
+				<h3 class="text-2xl mb-3 text-center">Search Contacts</h3>
+				<input
+					class="border border-gray-600 bg-gray-800 p-2 rounded-lg w-full mb-5"
+					type="search"
+					name="search"
+					placeholder="Begin Typing To Search Users..."
+					hx-post="/search"
+					hx-trigger="input changed delay:500ms, search"
+					hx-target="#search-results"
+					hx-indicator="#loading"
+				/>
+				<table class="min-w-full divide-y divide-gray-200">
+					<thead class="bg-gray-800 text-white">
+						<tr>
+							<th
+								scope="col"
+								class="px-6 py-3 text-center text-xs font-medium uppercase tracking-wider"
+							>
+								Name
+							</th>
+							<th
+								scope="col"
+								class="px-6 py-3 text-center text-xs font-medium uppercase tracking-wider"
+							>
+								Email
+							</th>
+						</tr>
+					</thead>
+					<tbody id="search-results" class="divide-y divide-gray-600">
+						<!-- Your search results go here -->
+					</tbody>
+				</table>
+			</div>
 		</div>
 	</body>
 </html>
