autofocus on search field on load

--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -35,6 +35,7 @@
 					hx-trigger="input changed delay:500ms, search"
 					hx-target="#search-results"
 					hx-indicator="#loading"
+					autofocus
 				/>
 				<table class="min-w-full divide-y divide-gray-200">
 					<thead class="bg-gray-800 text-white">
