--- a/htmx+node/public/index.html
+++ b/htmx+node/public/index.html
@@ -13,5 +13,28 @@
 
 		<title>Search Feature</title>
 	</head>
-	<body></body>
+	<body class="bg-gray-100">
+		<div
+			class="container mx-auto py-8 max-w-lg"
+			hx-target="this"
+			hx-swap="outerHTML"
+		>
+			<div class="bg-white p-6 rounded-lg shadow-lg">
+				<h2 class="text-xl text-gray-400 mb-4">PROFILE</h2>
+				<h1 class="text-2xl font-bold mb-4">John Doe</h1>
+				<p class="text-gray-700">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+					Nulla vestibulum vestibulum elit, ac facilisis ipsum
+					eleifend sed. Duis tincidunt augue nec neque cursus, nec
+					aliquet purus tempor.
+				</p>
+				<button
+					hx-get="/profile/1/edit"
+					class="bg-indigo-700 text-white font-bold w-full py-2 px-4 rounded-lg mt-4 hover:bg-indigo-600"
+				>
+					Click To Edit
+				</button>
+			</div>
+		</div>
+	</body>
 </html>
