--- a/alpin-js/index.html
+++ b/alpin-js/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<script src="https://unpkg.com/alpinejs" defer></script>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<title>Alpine Xps</title>
 	</head>
 	<body></body>
 </html>
