--- a/alpin-js/index.html
+++ b/alpin-js/index.html
@@ -5,7 +5,25 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<script src="https://unpkg.com/alpinejs" defer></script>
 		<script src="https://cdn.tailwindcss.com"></script>
+		<style>
+			[x-cloak] {
+				display: none;
+			}
+		</style>
 		<title>Alpine Xps</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container mx-auto mt-6 max-w-sm">
+			<h1 class="text-5xl mb-4">Apine.js Demo</h1>
+
+			<div x-data="{open: false}">
+				<div x-show="open" x-cloak>
+					<p class="bg-gray-200 p-4 my-6 rounded">
+						Lorem ipsum dolor, sit amet consectetur adipisicing
+						elit. Deserunt quibusdam facere natus debitis adipisci.
+					</p>
+				</div>
+			</div>
+		</div>
+	</body>
 </html>
