--- a/alpin-js/index.html
+++ b/alpin-js/index.html
@@ -16,7 +16,7 @@
 		<div class="container mx-auto mt-6 max-w-sm">
 			<h1 class="text-5xl mb-4">Apine.js Demo</h1>
 
-			<div x-data="{open: false}">
+			<div x-data="{open: false, name: 'myName'}">
 				<button
 					x-on:click="open = !open"
 					class="bg-slate-700 text-white px-4 py-2 rounded-xl"
@@ -28,6 +28,10 @@
 						Lorem ipsum dolor, sit amet consectetur adipisicing
 						elit. Deserunt quibusdam facere natus debitis adipisci.
 					</p>
+				</div>
+				<div class="mt-4">
+					The value of name is
+					<span class="font-bold" x-text="name"></span>
 				</div>
 			</div>
 		</div>
