--- a/alpin-js/index.html
+++ b/alpin-js/index.html
@@ -23,16 +23,13 @@
 				>
 					Toggle
 				</button>
-				<div x-show="open" x-cloak>
+				<div x-show="open" x-transition x-cloak>
 					<p class="bg-gray-200 p-4 my-6 rounded">
 						Lorem ipsum dolor, sit amet consectetur adipisicing
 						elit. Deserunt quibusdam facere natus debitis adipisci.
 					</p>
 				</div>
-				<div class="mt-4">
-					The value of name is
-					<span class="font-bold" x-text="name"></span>
-				</div>
+				<div class="mt-4"></div>
 			</div>
 		</div>
 	</body>
