--- a/alpin-js/index.html
+++ b/alpin-js/index.html
@@ -19,6 +19,7 @@
 			<div x-data="{open: false, name: 'myName'}">
 				<button
 					x-on:click="open = !open"
+					x-bind:class="open ? 'bg-blue-800' : 'bg-slate-700'"
 					class="bg-slate-700 text-white px-4 py-2 rounded-xl"
 				>
 					Toggle
@@ -30,6 +31,8 @@
 					</p>
 				</div>
 				<div class="mt-4"></div>
+
+				<div x-effect="console.log(open)"></div>
 			</div>
 		</div>
 	</body>
