--- a/alpin-js/index.html
+++ b/alpin-js/index.html
@@ -16,7 +16,18 @@
 		<div class="container mx-auto mt-6 max-w-sm">
 			<h1 class="text-5xl mb-4">Apine.js Demo</h1>
 
-			<div x-data="{open: false, name: 'myName'}">
+			<div
+				x-data="{
+                open: false, 
+                name: 'myName',
+                search: '',
+                movies: [
+                    {title: 'movie1'},
+                    {title: 'movie2'}
+                ]
+            }
+            "
+			>
 				<button
 					x-on:click="open = !open"
 					x-bind:class="open ? 'bg-blue-800' : 'bg-slate-700'"
@@ -33,6 +44,23 @@
 				<div class="mt-4"></div>
 
 				<div x-effect="console.log(open)"></div>
+
+				<input
+					type="text"
+					x-model="search"
+					class="border p-2 w-full mb-2 mt-6"
+				/>
+				<div>You are searching for <span x-text="search"></span></div>
+
+				<template x-if="open">
+					<div class="m-4 bg-gray-200">
+						<span
+							>The search will also appear here only on
+							toggle</span
+						>
+						<span x-text="search" class="font-bold"></span>
+					</div>
+				</template>
 			</div>
 		</div>
 	</body>
