--- a/alpin-js/index.html
+++ b/alpin-js/index.html
@@ -44,6 +44,7 @@
 				<div class="mt-4"></div>
 
 				<div x-effect="console.log(open)"></div>
+				<div x-effect="console.log(movies)"></div>
 
 				<input
 					type="text"
@@ -52,7 +53,7 @@
 				/>
 				<div>You are searching for <span x-text="search"></span></div>
 
-				<template x-if="open">
+				<template x-if="open" x-transition>
 					<div class="m-4 bg-gray-200">
 						<span
 							>The search will also appear here only on
@@ -61,6 +62,16 @@
 						<span x-text="search" class="font-bold"></span>
 					</div>
 				</template>
+
+				<template x-for="movie in movies">
+					<div x-text="movie.title"></div>
+				</template>
+				<button
+					x-on:click="movies.push({title: 'new movie'})"
+					class="bg-slate-700 text-white px-4 py-2 rounded-xl"
+				>
+					Add movie
+				</button>
 			</div>
 		</div>
 	</body>
