--- a/alpin-js/store.html
+++ b/alpin-js/store.html
@@ -3,7 +3,17 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<script src="https://unpkg.com/alpinejs" defer></script>
+		<!-- Alpine Plugins -->
+		<script
+			defer
+			src="https://cdn.jsdelivr.net/npm/@alpinejs/mask@3.x.x/dist/cdn.min.js"
+		></script>
+
+		<!-- Alpine Core -->
+		<script
+			defer
+			src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+		></script>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<title>Document</title>
 	</head>
@@ -26,6 +36,8 @@
 				Toggle Dark Mode
 			</button>
 		</div>
+
+		<input x-mask="99/99/9999" placeholder="MM/DD/YYYY" />
 
 		<script>
 			document.addEventListener("alpine:init", () => {
