--- a/qrCode.html
+++ b/qrCode.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>QR Code Scanner</title>
-		<script type="text/javascript" src="instascan.min.js"></script>
+		<!-- <script type="text/javascript" src="instascan.min.js"></script> -->
+		<script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
 	</head>
 	<body>
 		<button id="scan-btn">Scan QR Code</button>
@@ -18,6 +19,18 @@
 			scanner.addListener("scan", function (content) {
 				alert("Scanned QR code: " + content);
 			});
+
+			Instascan.Camera.getCameras()
+				.then(function (cameras) {
+					if (cameras.length > 0) {
+						scanner.start(cameras[0]);
+					} else {
+						console.error("No cameras found.");
+					}
+				})
+				.catch(function (e) {
+					console.error(e);
+				});
 
 			document
 				.getElementById("scan-btn")
